add API to retrieve the budget
