# open-api-spec.yaml
@@ -41,6 +41,33 @@ paths:
                 items:
                   $ref: '#/components/schemas/Project'
   /budget:
+    get:
+      parameters:
+        - name: projectId
+          in: query
+          description: Id of the project it is wanted to create the budget for
+          required: true
+          schema:
+            type: integer
+            format: int64
+      tags:
+        - budgets
+      summary: Get the budget related to a project
+      description: Get the budget related to a project
+      operationId: getBudget
+      responses:
+        '200':
+          description: Item created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Budget'
+        '404':
+          description: budget not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
     post:
       parameters:
         - name: projectId
